# AP1_EX2

./: CMakeLists.txt  CheckAdditionCreation.cpp  CheckAdditionCreation.h  checkGetters.cpp  checkGetters.h  main.cpp
Airplane_Company_Management/: Date.cpp  MyCustomer.cpp  MyCustomer.h  MyEmployee.cpp  MyEmployee.h  MyFlight.cpp  MyFlight.h  MyImplementation.cpp  MyImplementation.h  MyPlane.cpp  MyPlane.h  MyReservation.cpp  MyReservation.h  interface.h
Airplane_Company_Management/Descriptors/: Descriptor.cpp  Descriptor.h  DescriptorsFactory.cpp  DescriptorsFactory.h
Airplane_Company_Management/File_Parsing/: FileParser.h  ParseHandling.cpp  ParseHandling.h
Airplane_Company_Management/File_Parsing/File_Parsing_Utility/: Line.h
Airplane_Company_Management/Generic_Structures/: ObjectsMap.cpp  ObjectsMap.h
Airplane_Company_Management/Utility/: MapSorting.h  OperatorsHandling.cpp  OperatorsHandling.h  StringsUtility.cpp  StringsUtility.h
